Remove storybook padding in order to prevent happo diffs from being cut off

--- a/.storybook/storybook.scss
+++ b/.storybook/storybook.scss
@@ -1,7 +1,5 @@
 .sb-show-main {
   #root {
-    // add so that the top of stories isn't hidden by the iframe
-    padding-top: 5px;
     height: 100vh;
     .officeApp {
       .usa-form {
